# flipvault

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.arcium  README.md  dev.ps1  docker-compose.yml
app/: Cargo.toml
app/.cargo/: config.toml
app/crates/flipvault-pathb-sdk/: Cargo.toml
app/crates/flipvault-pathb-sdk/src/: disc.rs  ids.rs  lib.rs  pda.rs  state.rs
app/crates/flipvault-sdk/: Cargo.toml
app/crates/flipvault-sdk/src/: disc.rs  ids.rs  ix.rs  lib.rs  pda.rs  state.rs
app/frontend/: Cargo.toml  Dioxus.toml
app/frontend/src/: main.rs
app/indexer/: Cargo.toml  Dockerfile
app/indexer/src/: main.rs
app/keeper/: Cargo.toml  Dockerfile
app/keeper/src/: main.rs
docs/: FlipVault-analysis-appendix.md  FlipVault-app-deploy.md  FlipVault-app-plan-appendix.md  FlipVault-app-plan.md  FlipVault-arcium-research-appendix.md  FlipVault-arcium-research.md  FlipVault-decisions.md  FlipVault-devnet-runbook.md  FlipVault-pathb-M0.md  FlipVault-pathb-STATUS.md  FlipVault-pathb-arcium-patterns.md  FlipVault-pathb-backend-blueprint.md  FlipVault-pathb-linux-setup.md  FlipVault-understanding.md
flipvault/: Anchor.toml  package.json
flipvault/programs/flipvault/: Cargo.toml
flipvault/programs/flipvault/src/: constants.rs  curve.rs  error.rs  flip.rs  lib.rs  util.rs
flipvault/programs/flipvault/src/instructions/: commit_round.rs  deposit.rs  initialize.rs  mod.rs  recover_round.rs  settle_round.rs  sweep_treasury.rs  withdraw.rs
flipvault/programs/flipvault/src/state/: config.rs  mod.rs  position.rs  reserve.rs  treasury.rs  vault.rs
flipvault/scripts/: deposit.ts  initialize.ts  lib.ts  recover.ts  round.ts  settle.ts  status.ts  sweep.ts  withdraw.ts
flipvault/tests/: flipvault.ts
path-b/: Anchor.toml  README.md  package.json
path-b/encrypted-ixs/: Cargo.toml
path-b/encrypted-ixs/src/: lib.rs
path-b/programs/flipvault-pathb/: Cargo.toml
path-b/programs/flipvault-pathb/src/: constants.rs  error.rs  lib.rs  state.rs
path-b/spikes/curve-precision/: Cargo.toml
path-b/spikes/curve-precision/src/: lib.rs  main.rs
path-b/tests/: flipvault-pathb.ts
perpetual-backend/: README.md  docker-compose.yml  package-lock.json  package.json  prisma.config.ts  tsconfig.json
perpetual-backend/prisma/: schema.prisma
perpetual-backend/prisma/migrations/20260628101834_amm_vault/: migration.sql
perpetual-backend/src/: amm.test.ts  amm.ts  cache.ts  config.ts  db.ts  errors.ts  index.ts  json.ts  repo.ts  seed.ts  validation.ts
perpetual-backend/src/routes/: actions.ts  chain.ts  reads.ts
perpetual-backend/src/services/: candle.ts  pick.test.ts  pick.ts  selection.ts  trade.ts
scripts/: setup-arcium-wsl.sh
