[package]
name = "flipvault-keeper"
version = "0.1.0"
edition = "2021"
description = "Native service that drives FlipVault rounds: commit -> wait for ORAO VRF -> settle, with recovery."

[dependencies]
flipvault-sdk = { path = "../crates/flipvault-sdk" }
solana-pubkey = { workspace = true }
solana-instruction = { workspace = true }
solana-transaction = { version = "4", features = ["serde", "blake3"] }
solana-keypair = "3"
solana-signer = "3"
solana-hash = "4"
bincode = "=1.3.3"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
