[package]
name = "flipvault_pathb"
version = "0.1.0"
description = "FlipVault Path-B — confidential per-player perpetual (Arcium MPC)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flipvault_pathb"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
arcium-client = { default-features = false, version = "=0.11.1" }
arcium-macros = "=0.11.1"
arcium-anchor = "=0.11.1"
# Pins from the arcium scaffold: keep these crates off editions/versions that break the SBF build.
unicode-segmentation = { version = "=1.12.0" }
hashbrown = { version = "=0.16.1" }
indexmap = { version = "=2.13.1" }
time = { version = "=0.3.47" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
